--- a/html-css/html-basics/semantic-basics.html
+++ b/html-css/html-basics/semantic-basics.html
@@ -15,8 +15,25 @@
         <h1>Semantic HTML</h1>
     </header>
     
+    <!-- <div id="navigation">
+        <ul>
+            <li>Home</li>
+            <li>Solutions</li> 
+            <li>Products</li>
+            <li>About us</li>
+        </ul>
+    </div> -->
      
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
+    <nav id="navigation">
+        <ul>
+            <li>Home</li>
+            <li>Solutions</li>
+            <li>Products</li>
+            <li>About us</li>
+        </ul>
+    </nav>
+
+    <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
     alt="cat"
     width="200"
     height="200"
@@ -24,7 +41,7 @@
     <span>This is a cute cat</span>
     <br />
     <hr />
-    <br />
+    <br /> -->
 
     <figure>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
@@ -65,6 +82,7 @@
         </div>
     </div> -->
 
+    <!-- You dont have to have single header or footer per page. Use as many as you wish! -->
     <main id="blog-container">
         <section>
             <header>
