--- a/html-css/css-box-model/activity.html
+++ b/html-css/css-box-model/activity.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Activity</title>
   <style>
-    * {
+    :root {
       background-color: rgb(62, 66, 66);
     }
 
@@ -51,7 +51,6 @@
 
     .firstBox {
       border: solid 1px white;
-      padding: 10px;
       margin: 10px 0px;
     }
 
