--- a/html-css/css-box-model/index.html
+++ b/html-css/css-box-model/index.html
@@ -24,6 +24,7 @@
         margin-right: 50px; */
       /* margin: 50px; */
       text-align: center;
+      border-radius: 10px;
     }
 
     a:link {
