--- a/html-css/css-box-model/textBox.html
+++ b/html-css/css-box-model/textBox.html
@@ -9,7 +9,14 @@
 
     <style>
         ul li {
-            border: solid 1px;
+            background-color: green;
+            border: solid 3px black;
+            padding: 10px;
+            margin-right: 500px;
+        }
+
+        ul li:nth-child(even) {
+            background-color: grey;
         }
     </style>
 </head>
