--- a/html-css/css-box-model/textBox2.html
+++ b/html-css/css-box-model/textBox2.html
@@ -28,10 +28,7 @@
 <body>
 
     <div class="parent">
-        <div class="child">
-
-        </div>
-
+        <div class="child"></div>
     </div>
 </body>
 
