--- a/html-css/forms/activity.html
+++ b/html-css/forms/activity.html
@@ -25,6 +25,7 @@
         button {
             color: white;
             background-color: blue;
+            border-radius: 5px;
         }
     </style>
 </head>
