--- a/html-css/flexbox/flexbox.html
+++ b/html-css/flexbox/flexbox.html
@@ -32,9 +32,14 @@
 
         .container>div {
             border: 1px solid;
-            padding: 5px;
+            padding: 10px;
             /* width: 100px; */
             /* height: 40px; */
+        }
+
+        .container div:nth-child(1) {
+            /* order: 1; */
+            flex-shrink: 1;
         }
 
         .container div:nth-child(2) {
