--- a/html-css/homeworks/skyzone-hw.html
+++ b/html-css/homeworks/skyzone-hw.html
@@ -31,55 +31,73 @@
     <div>
         <h1>SkyZone Academy</h1>
         <div>
-            <button class="menuOptions">Home</button>
-            <button class="menuOptions">Services</button>
-            <button class="menuOptions">Projects</button>
-            <button class="menuOptions">About</button>
+            <p class="menuOptions">Home</p>
+            <p class="menuOptions">Services</p>
+            <p class="menuOptions">Projects</p>
+            <p class="menuOptions">About</p>
         </div>
 
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
             accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
-            ea!</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
             accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
             ea!</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
             accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
-            ea!</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
             accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
             ea!</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
             accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
-            ea!</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
             accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
             ea!</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
             accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
-            ea!</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
             accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
             ea!</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
             accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
-            ea!</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
             accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
             ea!</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
             accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
-            ea!</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
             accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
             ea!</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
             accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
-            ea!</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
             accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
             ea!</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
+            ea!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
+            accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
+            ea!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum totam, quaerat in a, aperiam ullam
             accusantium nam reprehenderit iusto labore eos ex reiciendis aspernatur repellat repudiandae nisi laudantium
             ea!</p>
     </div>
