--- a/html-css/homeworks/mrShrek.html
+++ b/html-css/homeworks/mrShrek.html
@@ -6,11 +6,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mr. Shrek Homework</title>
+
+    <style>
+        .upperBox {
+            border: 1px solid;
+            text-align: center;
+            padding: 5px;
+            margin: 10px;
+        }
+
+        .shrekBox {
+            border: 1px solid;
+            width: 150px;
+            padding-top: 10px;
+            float: left;
+        }
+
+        .box2 {
+            border: 1px solid;
+            width: 150px;
+            margin: 8px 5px;
+        }
+
+        .footer {
+            border: 1px solid;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Hello</h1>
+    <div class="upperBox">
+        <h1>Mr. Shrek's philosophy of life</h1>
+        <p>
+            Shrek (regally known as Sir Shrek) is the overall titular main protagonist of the Shrek franchise.<br>
+            He is Fiona's husband, Donkey and Puss' best friend, the ogre triplets' father, and the son in law of Queen
+            Lillian and King Harold.
+        </p>
+    </div>
+    <div class="shrekBox">
+        Mr. Shrek
+        <div>
+            <img src="https://k2.org/support/uploads/monthly_2019_04/icon.png.8adf148bdc489d80467cf450c6d37d22.png"
+                width="150" />
+        </div>
+    </div>
 
+    <div class="box2">
+        This is just a CSS example. See the links to the right if you are interested in the subject.
+    </div>
+
+    <div class="footer">
+        Made by Ulan<br>
+        Stories taken from, <a href="shrek.fandom.com"></a>
+    </div>
 </body>
 
 </html>
