--- a/html-css/homeworks/skyzone-hw.html
+++ b/html-css/homeworks/skyzone-hw.html
@@ -8,6 +8,10 @@
     <title>Homework</title>
 
     <style>
+        * {
+            margin: 0px;
+        }
+        
         .header {
             height: 100px;
             background-color: black;
@@ -16,38 +20,24 @@
             padding-top: 20px;
         }
 
-        .box {
-            border: 1px solid rgb(182, 182, 182);
-            padding: 10px;
-            margin: 20px 0;
-            position: relative;
-        }
-
         .menu {
-            margin: 0;
             padding: 0;
-            width: 100%;
-            background-color: #00bcd4;
+            background-color: lightskyblue;
             position: sticky;
             top: 0;
         }
 
-        ul {
-            display: block;
-            list-style-type: disc;
-        }
-
         .menu li {
             display: inline-block;
-            text-align: center;
             width: 24%;
         }
 
         .menu a {
             display: block;
+            text-align: center;
             padding: 10px;
             color: black;
-            text-decoration: solid;
+            text-decoration: none;
         }
         
         a:hover {
@@ -56,6 +46,7 @@
 
         p {
             color: lightgrey;
+            margin: 10px;
         }
     </style>
 </head>
