--- a/html-css/homeworks/mrShrek.html
+++ b/html-css/homeworks/mrShrek.html
@@ -17,20 +17,35 @@
 
         .shrekBox {
             border: 1px solid;
-            width: 150px;
+            width: fit-content;
             padding-top: 10px;
-            float: left;
+            margin: 10px;
         }
 
         .box2 {
             border: 1px solid;
             width: 150px;
-            margin: 8px 5px;
+            margin: 10px;
         }
 
         .footer {
             border: 1px solid;
             text-align: center;
+        }
+
+        .bold {
+            font-weight: bold;
+        }
+
+        ol {
+            border: 1px solid;
+            padding: 40px;
+            width: 300px;
+            margin: 150px;
+        }
+
+        li {
+            /* padding: 10px; */
         }
     </style>
 </head>
@@ -39,7 +54,9 @@
     <div class="upperBox">
         <h1>Mr. Shrek's philosophy of life</h1>
         <p>
-            Shrek (regally known as Sir Shrek) is the overall titular main protagonist of the Shrek franchise.<br>
+            Shrek (regally known as Sir Shrek) is the overall titular main protagonist of the Shrek franchise.
+            <br>
+            <br>
             He is Fiona's husband, Donkey and Puss' best friend, the ogre triplets' father, and the son in law of Queen
             Lillian and King Harold.
         </p>
@@ -56,9 +73,34 @@
         This is just a CSS example. See the links to the right if you are interested in the subject.
     </div>
 
+    <div>
+        <ol>
+            <li>
+                <p class="bold">Loves everyone</p>
+                <p>Loves everyone</p>
+            </li>
+            <li>
+                <p class="bold">Fights everyon</p>
+                <p>Fights everyone</p>
+            </li>
+            <li>
+                <p class="bold">Laughs often</p>
+                <p>Laughs often</p>
+            </li>
+            <li>
+                <p class="bold">Sleeps all the time</p>
+                <p>Sleeps all the time</p>
+            </li>
+            <li>
+                <p class="bold">Eats so much</p>
+                <p>Eats so much</p>
+            </li>
+        </ol>
+    </div>
+
     <div class="footer">
         Made by Ulan<br>
-        Stories taken from, <a href="shrek.fandom.com"></a>
+        Stories taken from, <a href="shrek.fandom.com">shrek.fandom.com</a>
     </div>
 </body>
 
