--- a/html-css/homeworks/mrShrek.html
+++ b/html-css/homeworks/mrShrek.html
@@ -8,33 +8,32 @@
     <title>Mr. Shrek Homework</title>
 
     <style>
-        .upperBox {
+        header {
             border: 1px solid;
             text-align: center;
             padding: 5px;
             margin: 10px;
         }
 
-        .shrekBox {
-            border: 1px solid;
+        .headingText {
+            font-size: small;
+        }
+
+        .left {
+            /* border: 1px solid; */
             width: fit-content;
             padding-top: 10px;
             margin: 10px;
         }
 
-        .box2 {
+        .shrekBox {
             border: 1px solid;
-            width: 150px;
-            margin: 10px;
+            margin-bottom: 2px;
         }
 
         .footer {
             border: 1px solid;
             text-align: center;
-        }
-
-        .bold {
-            font-weight: bold;
         }
 
         ol {
@@ -44,63 +43,75 @@
             margin: 150px;
         }
 
-        li {
-            /* padding: 10px; */
+        .list {
+
+            /* width: 61%; */
+            min-width: 4cm;
+            margin-left: 1%;
+            margin-right: 1%;
+            border: 1px solid;
+            padding: 1em;
         }
     </style>
 </head>
 
 <body>
-    <div class="upperBox">
+    <header>
         <h1>Mr. Shrek's philosophy of life</h1>
-        <p>
+        <p class="headingText">
             Shrek (regally known as Sir Shrek) is the overall titular main protagonist of the Shrek franchise.
             <br>
             <br>
-            He is Fiona's husband, Donkey and Puss' best friend, the ogre triplets' father, and the son in law of Queen
+            He is Fiona's husband, Donkey and Puss' best friend, the ogre triplets' father, and the son in law of
+            Queen
             Lillian and King Harold.
         </p>
-    </div>
-    <div class="shrekBox">
-        Mr. Shrek
-        <div>
-            <img src="https://k2.org/support/uploads/monthly_2019_04/icon.png.8adf148bdc489d80467cf450c6d37d22.png"
-                width="150" />
+    </header>
+
+    <div class="main">
+        <div class="left">
+            <div class="shrekBox">
+                Mr. Shrek
+                <div>
+                    <img src="https://k2.org/support/uploads/monthly_2019_04/icon.png.8adf148bdc489d80467cf450c6d37d22.png"
+                        width="150" />
+                </div>
+            </div>
+
+            <div class="shrekBox">
+                This is just a CSS example. See the links to the right if you are interested in the subject.
+            </div>
         </div>
-    </div>
 
-    <div class="box2">
-        This is just a CSS example. See the links to the right if you are interested in the subject.
-    </div>
+        <div class="list">
+            <ol>
+                <li>
+                    <p><strong>Loves everyone</strong></p>
+                    <p>Loves everyone</p>
+                </li>
+                <li>
+                    <p><strong>Fights everyone</strong></p>
+                    <p>Fights everyone</p>
+                </li>
+                <li>
+                    <p><strong>Laughs often</strong></p>
+                    <p>Laughs often</p>
+                </li>
+                <li>
+                    <p><strong>Sleeps all the time</strong></p>
+                    <p>Sleeps all the time</p>
+                </li>
+                <li>
+                    <p><strong>Eats so much</strong></p>
+                    <p>Eats so much</p>
+                </li>
+            </ol>
+        </div>
 
-    <div>
-        <ol>
-            <li>
-                <p class="bold">Loves everyone</p>
-                <p>Loves everyone</p>
-            </li>
-            <li>
-                <p class="bold">Fights everyon</p>
-                <p>Fights everyone</p>
-            </li>
-            <li>
-                <p class="bold">Laughs often</p>
-                <p>Laughs often</p>
-            </li>
-            <li>
-                <p class="bold">Sleeps all the time</p>
-                <p>Sleeps all the time</p>
-            </li>
-            <li>
-                <p class="bold">Eats so much</p>
-                <p>Eats so much</p>
-            </li>
-        </ol>
-    </div>
-
-    <div class="footer">
-        Made by Ulan<br>
-        Stories taken from, <a href="shrek.fandom.com">shrek.fandom.com</a>
+        <div class="footer">
+            Made by Ulan<br>
+            Stories taken from, <a href="shrek.fandom.com">shrek.fandom.com</a>
+        </div>
     </div>
 </body>
 
