--- a/html-css/homeworks/forms-hw.html
+++ b/html-css/homeworks/forms-hw.html
@@ -52,6 +52,10 @@
             border-radius: 10px;
         }
 
+        button:active {
+            background-color: grey;
+        }
+
         .signUp {
             background-color: rgb(290, 0, 100);
             /* border-color: rgb(290, 0, 100); */
