--- a/html-css/homeworks/mrShrek.html
+++ b/html-css/homeworks/mrShrek.html
@@ -20,10 +20,9 @@
         }
 
         .left {
-            /* border: 1px solid; */
-            width: fit-content;
+            width: 15%;
             padding-top: 10px;
-            margin: 10px;
+            margin-left: 10px;
         }
 
         .shrekBox {
@@ -34,23 +33,33 @@
         .footer {
             border: 1px solid;
             text-align: center;
-        }
-
-        ol {
-            border: 1px solid;
-            padding: 40px;
-            width: 300px;
-            margin: 150px;
+            margin-top: 10px;
         }
 
         .list {
-
-            /* width: 61%; */
-            min-width: 4cm;
-            margin-left: 1%;
-            margin-right: 1%;
             border: 1px solid;
-            padding: 1em;
+            padding: 15px;
+            margin: 10px 1px;
+            width: 62%;
+        }
+
+        .right {
+            width: 18%;
+            padding-top: 10px;
+        }
+
+        .appearance {
+            border: 1px solid;
+        }
+
+        .powers {
+            border: 1px solid;
+            margin: 2px 0px;
+        }
+
+        .main>div {
+            display: inline-block;
+            vertical-align: top;
         }
     </style>
 </head>
@@ -74,10 +83,9 @@
                 Mr. Shrek
                 <div>
                     <img src="https://k2.org/support/uploads/monthly_2019_04/icon.png.8adf148bdc489d80467cf450c6d37d22.png"
-                        width="150" />
+                        width="100%" />
                 </div>
             </div>
-
             <div class="shrekBox">
                 This is just a CSS example. See the links to the right if you are interested in the subject.
             </div>
@@ -108,10 +116,28 @@
             </ol>
         </div>
 
-        <div class="footer">
-            Made by Ulan<br>
-            Stories taken from, <a href="shrek.fandom.com">shrek.fandom.com</a>
+        <div class="right">
+            <div class="appearance">
+                <h4>Appearance</h4>
+                <p>Shrek is a green rotund ogre with brown eyes and a bald head. He wears a white long sleeved tunic
+                    within his brown turtle designed mini vest, brown pinstriped pants and dark short boots with a rip
+                    folded design in each side.</p>
+            </div>
+            <div class="powers">
+                <p>Powers and Abilities: Superhuman Strength, Enhanced Durability, Unarmed Combatant
+                    <br>
+                    <br>
+                    Survivalist, Strategist, Storytelling
+                </p>
+            </div>
         </div>
+
+
+    </div>
+
+    <div class="footer">
+        Made by Naim<br>
+        Stories taken from, <a href="shrek.fandom.com">shrek.fandom.com</a>
     </div>
 </body>
 
