--- a/html-css/grid/children.html
+++ b/html-css/grid/children.html
@@ -33,6 +33,10 @@
             /* grid-row-start: 2;
             grid-row-end: 4; */
 
+            /* align-self: start; */
+            /* align-self: center; */
+
+            /* place-self: start; */
         }
         .item3 {
             background-color: green;
